--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
+    "luxon": "^3.5.0",
     "sqlite3": "^5.1.7"
   }
 }
